k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sbb-lost-found
  labels:
    app.kubernetes.io/name: sbb-lost-found
    app.kubernetes.io/component: namespace
